(geometry) Fix btn-round alignment, add cursor, remove underline

--- a/assets/css/geometry-club.css
+++ b/assets/css/geometry-club.css
@@ -33,6 +33,9 @@ img {
   width: 3rem;
   height: 3rem;
   line-height: 3rem;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
 }
 
 .link,
